--- a/app/shared/drawer/drawer.component.html
+++ b/app/shared/drawer/drawer.component.html
@@ -5,8 +5,7 @@
 </GridLayout>
 <StackLayout class="drawer-links" orientation="vertical">
     <StackLayout class="drawer-link" orientation="horizontal" [nsRouterLink]="['/city-of-clownia']">
-        <Image src="res://add" stretch="none"></Image>
-        <Label class="text" text="Ciutat de Clownia"></Label>
+        <Label class="text" text="&#xf1ad;    Ciutat de Clownia"></Label>
     </StackLayout>
     <StackLayout class="drawer-link" orientation="horizontal" [nsRouterLink]="['/con-space']">
         <Image src="res://add" stretch="none"></Image>
