--- a/app/shared/drawer/drawer.component.html
+++ b/app/shared/drawer/drawer.component.html
@@ -15,8 +15,7 @@
         <Image src="res://add" stretch="none"></Image>
         <Label class="text" text="Sant Joan de les Abadesses i el Ripollès"></Label>
     </StackLayout>
-    <StackLayout class="drawer-separator">
-    </StackLayout>
+    <StackLayout class="drawer-separator"></StackLayout>
     <StackLayout class="drawer-link" orientation="horizontal" (tap)="logout()">
         <Image src="res://add" stretch="none"></Image>
         <Label class="text" text="Logout" ></Label>
