feat(components update): coded functional parts of the app
Added real data, artists filters by stage and ordered by date, fixed bottom bar-routing css

--- a/app/pages/artist/artist-common.css
+++ b/app/pages/artist/artist-common.css
@@ -12,3 +12,14 @@
     background:black;
     border-bottom: 1px solid black;
 }
+.social-bar {
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+}
+.social-nav-bar {
+    font-family: 'FontAwesome';
+    font-size: 30;
+    text-align: center;
+    color:black;
+    padding: 3;
+}
