--- a/app/shared/drawer/drawer.component.html
+++ b/app/shared/drawer/drawer.component.html
@@ -13,7 +13,7 @@
     </StackLayout>
     <StackLayout class="drawer-link" orientation="horizontal" [nsRouterLink]="['/explore']">
         <Image src="res://add" stretch="none"></Image>
-        <Label class="text" text="Sant Joan de les Abadesses i el Ripollès"></Label>
+        <Label class="text" textWrap="true" text="Sant Joan de les Abadesses i el Ripollès"></Label>
     </StackLayout>
     <StackLayout class="drawer-separator"></StackLayout>
     <StackLayout class="drawer-link" orientation="horizontal" (tap)="logout()">
