feat(guest user, fixed schedules):

--- a/app/pages/home/home.component.html
+++ b/app/pages/home/home.component.html
@@ -11,7 +11,7 @@
   <StackLayout tkMainContent>
       <GridLayout rows="*,60">
           <ScrollView row="0">
-
+            <a class="twitter-timeline" href="https://twitter.com/clowniafestival?ref_src=twsrc%5Etfw">Tweets by clowniafestival</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </ScrollView>
           <!-- BOTTOM BAR -->
           <bottom-bar></bottom-bar>
