--- a/app/pages/login/login-common.css
+++ b/app/pages/login/login-common.css
@@ -3,9 +3,13 @@
   background-repeat: no-repeat;
   background-position: center top; /* instead set ypos to top to avoid scroll-up */
 }
-
+.guest {
+  margin-top: 10;
+  color:white;
+  text-align: center;
+  font-size: 20;
+}
 StackLayout {
-
     margin-left: 30;
     margin-right: 30;
   }
@@ -25,7 +29,9 @@ StackLayout {
     color: white;
     margin-top: 20;
   }
-
+.loginBtn {
+  color:white;
+}
   /* Facebook */
 .loginBtn--facebook {
   background-color: #4C69BA;
@@ -34,7 +40,6 @@ StackLayout {
 .loginBtn--facebook:before {
   border-right: #364e92 1px solid;
 }
-.loginBtn--facebook:hover,
 .loginBtn--facebook:focus {
   background-color: #5B7BD5;
 }
@@ -46,9 +51,7 @@ StackLayout {
 }
 .loginBtn--google:before {
   border-right: #BB3F30 1px solid;
-  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 6px 6px no-repeat;
 }
-.loginBtn--google:hover,
 .loginBtn--google:focus {
   background: #E74B37;
 }
