--- a/app/pages/line-up/line-up.component.html
+++ b/app/pages/line-up/line-up.component.html
@@ -22,15 +22,15 @@
                     <ScrollView>
                         <ListView [items]="artists">
                             <ng-template let-item="item" let-i="index" let-odd="odd" let-even="even">
-                                <StackLayout [class.odd]="odd" [class.even]="even" [nsRouterLink]="['/artist/'+item.id]">
-                                    <GridLayout columns="120,*,40" row="100">
+                                <StackLayout [class.odd]="odd" [class.even]="even">
+                                    <GridLayout columns="120,*,40" row="100" [nsRouterLink]="['/artist/'+item.id]">
                                         <Image col="0" stretch="aspectFit" [src]="item.profile_pic"></Image>
                                         <StackLayout class="artist-info" col="1" rows="*">
                                             <Label textWrap="true" [text]='item.name'></Label>
                                             <Label textWrap="true" text="{{ item.startTime }} - {{ item.endTime }}" ></Label>
                                             <Label textWrap="true" [text]='item.stage'></Label>
                                         </StackLayout>
-                                        <Label col="2" class="awesome" text="&#xf0fe;" textAlignment="center"></Label>
+                                        <Label col="2" class="awesome" text="&#xf0fe;" textAlignment="center" (tap)="addToSchedule(item)"></Label>
                                     </GridLayout>
                                 </StackLayout>
                             </ng-template>
@@ -155,15 +155,18 @@
         <!-- MY SCHEDULE -->
         <GridLayout *ngIf="mySchedule" rows="*">
                 <ScrollView>
-                    <ListView [items]="artists">
+                    <ListView [items]="localSchedule">
                         <ng-template let-item="item" let-i="index" let-odd="odd" let-even="even">
                             <StackLayout [class.odd]="odd" [class.even]="even" [nsRouterLink]="['/artist/'+item.id]">
-                                <GridLayout columns="120,*" row="100">
+                                <GridLayout columns="120,*,40" row="100" [nsRouterLink]="['/artist/'+item.id]">
                                     <Image col="0" stretch="aspectFit" [src]="item.profile_pic"></Image>
-                                    <StackLayout col="1" rows="*">
+                                    <StackLayout class="artist-info" col="1" rows="*">
                                         <Label textWrap="true" [text]='item.name'></Label>
-                                        <Label textWrap="true" [text]='item.startTime'></Label>
+                                        <Label textWrap="true" text="{{ item.startTime }} - {{ item.endTime }}" ></Label>
+                                        <Label textWrap="true" [text]='item.stage'></Label>
+                                        <Label textWrap="true" [text]='item.day'></Label>
                                     </StackLayout>
+                                    <Label col="2" class="awesome" text="&#xf146;" textAlignment="center" (tap)="removeFromSchedule(item)"></Label>
                                 </GridLayout>
                             </StackLayout>
                         </ng-template>
