--- a/app/pages/city-of-clownia/city.component.html
+++ b/app/pages/city-of-clownia/city.component.html
@@ -8,11 +8,16 @@
       </StackLayout>
   </ScrollView>
   <!-- MAIN CONTENT OF PAGE GOES BELOW-->
-  <StackLayout tkMainContent>
-      <Label text="Pàgina de la ciutat de clownia"></Label>
+  <StackLayout tkMainContent class="bg-img">
+      <Label text="Ciutat de Clownia" class="title"></Label>
       <GridLayout rows="*,60">
             <ScrollView row="0">
-  
+                <TextView editable="false" text="Aquesta història va començar amb un conte. Un conte teixit entre amics que parlava de Clownia; la ciutat llunyana. Era la història d’un món millor i, aquell hivern del 2010, va ser explicada per primera vegada dalt d’un escenari donant el tret de sortida a la primera gira del nostre petit projecte, TXARANGO.
+
+                4 anys després vam decidir que si l’havíem inventada també podíem provar de construir-la. I aquí estem.
+                
+                Clownia és la utopia. El lloc on tot és possible. L’horitzó que nosaltres proposem. Un espai de projecció, reflexió i intercanvi. Una petita ciutat. Un teatre. Clownia és un homenatge als pobles petits on hem crescut i és també la nostra manera de donar les gràcies. La il·lusió de portar a casa totes aquelles propostes que estimem.">
+                </TextView>
             </ScrollView>
             <!-- BOTTOM BAR -->
             <bottom-bar></bottom-bar>
