--- a/app/pages/home/home.component.html
+++ b/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
       </StackLayout>
   </ScrollView>
   <!-- MAIN CONTENT OF PAGE GOES BELOW-->
-  <StackLayout tkMainContent>
+  <StackLayout tkMainContent class="bg-artists">
       <GridLayout rows="*,60">
           <ScrollView row="0">
             <a class="twitter-timeline" href="https://twitter.com/clowniafestival?ref_src=twsrc%5Etfw">Tweets by clowniafestival</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
